project/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-dep
  strategy: 
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: backend-dep
    spec:
      containers:
        - name: backend
          image: BACKEND_IMAGE
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: 3001
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: 3001
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
