project/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-svc
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-set
spec:
  serviceName: postgres-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.3-alpine
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
