project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: backend-svc
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
