project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /todos
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-svc
            port:
              number: 2345
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: project-svc
            port:
              number: 2345
